<resources>
    <string name="app_name">FirstApp</string>
    <string name="b1name">Formularz</string>
    <string name="b2name">Aktywnosc2</string>
    <string name="b3name">Wyślij</string>
    <string name="r1op">Mężczyzna</string>
    <string name="r2op">Kobieta</string>
    <string name="imie">Imię</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="pilkanozna">Piłka Nożna</string>
    <string name="siatkowka">Siatkówka</string>
    <string name="koszykowka">Koszykówka</string>
    <string name="dlugo">Przyciśnij mnie dłużej...</string>
    <string name="switchOn">On</string>
    <string name="switchOff">Off</string>
    <string name="exampleText">Przykładowy tekst - zmiana koloru</string>
    <string name="b4name">BMI</string>
    <string name="bmitytul">Oblicz swój współczynnik BMI!</string>
    <string name="waga">Wprowadź wagę</string>
    <string name="wzrost">Wprowadź wzrost</string>
    <string name="b5name">Wyślij</string>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </string-array>
    <string-array name="year">
        <item>2019</item>
        <item>2018</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
        <item>2009</item>
        <item>2008</item>
        <item>2007</item>
        <item>2006</item>
        <item>2005</item>
        <item>2004</item>
        <item>2003</item>
        <item>2002</item>
        <item>2001</item>
        <item>2000</item>
        <item>1999</item>
        <item>1998</item>
        <item>1997</item>
        <item>1996</item>
        <item>1995</item>
        <item>1994</item>
        <item>1993</item>
        <item>1992</item>
        <item>1991</item>
        <item>1990</item>
    </string-array>
</resources>
