<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:id="@+id/longClick"
        android:text="@string/dlugo"
        android:layout_gravity="top"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/longClick"
        android:layout_below="@id/longClick"
        android:layout_marginTop="20dp"
        android:id="@+id/switch1"
        android:textOn="@string/switchOn"
        android:textOff="@string/switchOff"/>
        <!--android:onClick="changeColor"-->
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/switch1"
        android:layout_below="@id/switch1"
        android:layout_marginTop="5dp"
        android:id="@+id/colortext"
        android:text="@string/exampleText"
        android:textColor="@color/colorAccent"
        />
</RelativeLayout>