<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<TableRow>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="18dp"
        android:onClick="uruchomDwa"
        android:text="@string/b1name" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/button1"
        android:layout_below="@id/button1"
        android:layout_marginTop="18dp"
        android:onClick="uruchomTrzy"
        android:text="@string/b2name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_alignLeft="@id/button2"
        android:layout_below="@id/button2"
        android:text="@string/b4name"
        android:layout_marginTop="18dp"
        android:onClick="uruchomCztery"
        />

</TableRow>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@id/button4"
        android:layout_marginTop="50dp"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/zdj"
            android:onClick="tekstAlternatywny"
            />

    </RelativeLayout>
</TableLayout>