<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <TextView
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/bmitytul"
        android:textSize="26dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/waga"
        android:layout_marginLeft="15dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:id="@+id/kilogram"
        android:ems="2"
        android:layout_marginLeft="135dp"
        android:hint="70"
        android:inputType="numberDecimal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/wzrost"
        android:layout_marginLeft="15dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:id="@+id/wzrost"
        android:ems="2"
        android:layout_marginLeft="135dp"
        android:hint="185"
        android:inputType="numberDecimal"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sendBMI"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/b5name"
        android:layout_marginLeft="120dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:onClick="obliczBMI"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="15dp"
        android:textSize="20dp"
        android:id="@+id/wynik"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="Niedowaga do 18,5"
        android:layout_marginRight="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="Norma 18,5 - 24,9"
        android:layout_marginRight="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:text="Nadwaga 25 - 29,9"
        android:layout_marginRight="5dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_row="3"
        android:layout_column="1"
        android:text="Otyłość >29.9"
        android:layout_marginRight="5dp"
        />
</GridLayout>